hphp/hack/test/typecheck/aktuple/dynamic_index_non_lvalue_ok.php.exp
File "dynamic_index_non_lvalue_ok.php", line 12, characters 12-16:
Invalid argument (Typing[4110])
File "dynamic_index_non_lvalue_ok.php", line 16, characters 19-21:
This is an int
File "dynamic_index_non_lvalue_ok.php", line 9, characters 17-21:
It is incompatible with a string
